# macropad

firmware/: .gdbdebug  platformio.ini  usbmon.sh
firmware/src/: hid_descriptors.c  hid_descriptors.h  key_press.h  keypress.h  keypress_sequence.c  keypress_sequence.h  layout.h  leds.c  leds.h  main.c  matrix.c  matrix.h  output_buffer.c  output_buffer.h  sequences.c  sequences.h  shell.c  shell.h  tables.h  usb_descriptors.c  usb_descriptors.h  usb_handshake.c  usb_handshake.h  usb_key_press_seq.c  usb_key_press_seq.h
firmware/src/microrl/: config.h  microrl.c
host/: macropad-udev.rule
host/macropad-daemon/: Cargo.toml  config.yaml  rofi_test.sh  run.sh  run_client.sh
host/macropad-daemon/src/: cli_server_thread.rs  events.rs  inotify_thread.rs  main.rs  program_device.rs  programmer_thread.rs  udev_polling_thread.rs
host/macropad-daemon/src/config/: keypress.rs  keypress_config_parser.rs  keypress_sequence.rs  mod.rs
pcb/macropad/: .gitignore  fp-info-cache  macropad-B_Cu.gbr  macropad-B_Mask.gbr  macropad-B_Paste.gbr  macropad-B_SilkS.gbr  macropad-Edge_Cuts.gbr  macropad-F_Cu.gbr  macropad-F_Mask.gbr  macropad-F_Paste.gbr  macropad-F_SilkS.gbr  macropad-NPTH.drl  macropad-PTH.drl  macropad-cache.lib  macropad-job.gbrjob  macropad.kicad_pcb  macropad.kicad_pcb-bak  macropad.net  macropad.pro  macropad.sch  macropad.sch-bak
