[package]
name = "macropad_daemon2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.4", features=["os-poll", "net"]}
regex = "1.6.0"
udev = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4.17"
simple_logger = "4.0.0"
ctrlc = "3.2.3"
clap = { version = "4.0.19", features = ["derive"] }
inotify = "0.10.0"

